Fixed icon in open hours to have normal font-weight. Icon gets blurred when bold, as it is inverted

--- a/sass/latto.subtheme.base.scss
+++ b/sass/latto.subtheme.base.scss
@@ -251,6 +251,7 @@ ul {
   font-family: "FontAwesome";
   color: #555555;
   opacity: 0.5;
+  font-weight: normal;
 }
 
 .icon-info-sign:before, .opening-hours-week .notice-star:before {
